added trackroute pages, direct labels

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,13 @@
                         <button type="submit" class="btn btn-dark mt-3">Begin</button>
                     </div>
                 </form>
+                <form method="POST" action="/trackedRoutes">
+                    <input class="form-control" id="name" type="text" name="name"
+                        placeholder="Please identify yourself..." required>
+                        <div class="d-grid mx-auto">
+                            <button type="submit" class="btn btn-dark mt-3">Save routes</button>
+                        </div>
+                </form>
             </div>
         </div>
     </div>
